# wfc

./: LICENSE  README.md  pyproject.toml
tests/: test_image_tools.py
wfc/: candidates.py  image_tools.py  main.py  tileset.py  wfc_2d.py
wfc/models/: rules.py  tileset.py
