[tool.poetry]
name = "wfc"
version = "0.1.0"
description = ""
authors = ["Colt Jay <colton.chapin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
numpy = "^2.1.3"
defopt = "^6.4.0"
structlog = "^24.4.0"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
